# Task-Manager

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: check.yml  hexlet-check.yml  main.yml
core/: consts.py  mixins.py  models.py  urls.py  views.py
labels/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
labels/migrations/: 0001_initial.py
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
task_manager/: conftest.py  settings.py  urls.py  views.py
task_manager/core/: apps.py  consts.py  mixins.py  models.py  urls.py  views.py
task_manager/core/tests/: consts.py  test_db.py  test_env.py
task_manager/labels/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_tasklabel_options_alter_tasklabel_name.py
task_manager/labels/tests/: conftest.py  test_label_form.py  test_label_model.py  (+2 more)
task_manager/statuses/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/: admin.py  filters.py  forms.py  mixins.py  models.py  urls.py  views.py
task_manager/templates/: base.html  index.html
task_manager/users/: forms.py  mixins.py  models.py  urls.py  views.py
tasks/: admin.py  apps.py  filters.py  forms.py  mixins.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_initial.py  0004_alter_task_labels.py
templates/: base.html  index.html
templates/includes/: creation_form.html  flash.html  header.html
templates/labels/: delete.html  detail.html  list.html
templates/statuses/: create_update.html  delete.html  detail.html  list.html
templates/tasks/: delete.html  detail.html  list.html  update_delete.html
templates/users/: create_update.html  delete.html  detail.html  list.html  login.html  update.html
tests/: conftest.py  test_db.py  test_labels.py  test_statuses.py  test_tasks.py  test_users.py
users/: apps.py  forms.py  mixins.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_delete_user.py  0003_initial.py  0004_delete_user.py
(+39 files in other folders)
