[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager"
authors = ["Denis <snegirev.dv@gmail.com>"]
readme = "README.md"
packages = [{ include = "task_manager" }]

[tool.poetry.dependencies]
python = "^3.10"
django = "5.0.7"
python-dotenv = "^1.0.1"
dj-database-url = "^2.2.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"
django-bootstrap5 = "^24.2"
black = "^24.4.2"
django-filter = "^24.2"
pytest = "^8.3.2"
pytest-django = "^4.8.0"
rollbar = "^0.16.3"
coverage = "^7.6.0"
pytest-cov = "^5.0.0"
flake8 = "^7.1.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["django"]
skip = [".venv", "migrations"]
use_parentheses = true
