[tool.poetry]
name = "task_manager"
version = "0.1.0"
description = "Task Manager"
authors = ["Denis <snegirev.dv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "5.0.7"
python-dotenv = "^1.0.1"
dj-database-url = "^2.2.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"
django-bootstrap5 = "^24.2"
django-filter = "^24.2"
rollbar = "^0.16.3"
black = "^24.4.2"
flake8 = "^7.1.0"
pytest = "^8.3.2"
pytest-django = "^4.8.0"
coverage = "^7.6.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
